# cmake_example_project

./: CMakeLists.txt
framework/: CMakeLists.txt
framework/include/: test.h
framework/src/: test.cc
framework/tools/: build.bat  build_mingw.bat  build_msvs2017.bat  build_ninja.bat  clean.bat  regenerate.bat  regenerate_mingw.bat  regenerate_msvs2017.bat  regenerate_ninja.bat  run.bat
